# git-workspace

./: .gitignore  .python-version  CHANGELOG.md  README.md  SKILL.md  manifest  manifest.toml  pyproject.toml
.beads/: metadata.json
.github/demo/: README.md  demo.tape  setup.sh
.github/demo/workspace/: manifest.toml
.github/demo/workspace/assets/: config.local.yaml  env.local
.github/workflows/: ci.yml  publish.yml  pypi.yml
assets/: config.yaml  docker-compose.yaml
files/: .env
shell/: git-workspace.sh
src/git_workspace/: __init__.py  assets.py  cache.py  doctor.py  env.py  errors.py  fingerprint.py  git.py  hooks.py  logging_config.py  manifest.py  operations.py  output.py  ui.py  utils.py  workspace.py  worktree.py  worktrees.py
src/git_workspace/cli/: __init__.py  callbacks.py  parsers.py
tests/: conftest.py  helpers.py
tests/integration/: conftest.py  helpers.py  test_adaptive_hooks.py  test_cache.py  test_clone.py  test_compose.py  test_copying.py  test_cwd_resolution.py  test_doctor.py  test_down.py  test_edit.py  test_errors.py  test_exec.py  test_fingerprint_injection.py  test_framework.py  test_hooks.py  test_init.py  test_linking.py  test_list.py  test_ls.py  test_prune.py  test_remove.py  test_reset.py  test_root.py  test_up.py  test_vars.py
tests/unit/: test_cache_class.py  test_command_cache.py  test_command_clone.py  test_command_compose.py  test_command_down.py  test_command_edit.py  test_command_exec.py  test_command_init.py  test_command_list.py  test_command_prune.py  test_command_remove.py  test_command_reset.py  test_command_up.py  test_copier.py  test_doctor_checks.py  test_env.py  test_extract_humanish_suffix.py  test_fingerprints.py  test_git.py  test_hook_runner.py  test_ignore_manager.py  test_linker.py  test_manifest.py  test_operations.py  test_parsers.py  test_utils.py  test_workspace.py  test_workspace_factory.py  test_workspace_paths.py  test_workspace_resolver.py  test_workspace_validator.py  test_worktree.py  test_worktrees.py
tests/unit/git/: conftest.py  test_add_worktree.py  test_branch_existence.py  test_clone.py  test_commit_info.py  test_fetch_origin.py  test_get_current_branch.py  test_get_origin_head.py  test_get_worktree_root.py  test_has_remote.py  test_init.py  test_is_empty_repo.py  test_is_worktree_dirty.py  test_list_worktrees_metadata.py  test_remove_worktree.py
tests/unit/hooks/: test_build_hook_env.py  test_run_activation_hooks.py  test_run_attach_hooks.py  test_run_deactivate_hooks.py  test_run_remove_hooks.py  test_run_setup_hooks.py
tests/unit/manifest/: test_read_manifest.py
tests/unit/utils/: test_extract_humanish_suffix.py
tests/unit/workspace/: test_apply_links.py  test_build_hook_env.py  test_cleanup_empty_parent_dirs.py  test_create.py  test_find_worktree_path.py  test_resolve_base_branch.py  test_resolve_branch.py  test_resolve_root_path.py  test_resolve_up_plan.py  test_run_activation_hooks.py  test_run_attach_hooks.py  test_run_remove_hooks.py  test_run_reset_hooks.py  test_run_setup_hooks.py  test_sync_exclude_block.py  test_worktree_execution.py
tests/unit/worktree/: test_listing.py  test_prune.py  test_resolve_base_branch.py  test_resolve_up_plan.py  test_sync_exclude_block.py  test_worktree_execution.py
(+47 files in other folders)
