[project]
name = "git-workspace-cli"
version = "0.1.0"
description = "An opinionated git plugin for managing worktrees"
readme = "README.md"
authors = [{ name = "Gabriel Lima", email = "gvclima@gmail.com" }]
requires-python = ">=3.15"
dependencies = [
 "typer>=0.24.1",
]

[tool.uv.build-backend]
module-name = "git_workspace"

[project.scripts]
git-workspace = "git_workspace:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyfakefs>=6.1.6",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.10",
    "ty>=0.0.30",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["git_workspace"]
