[project]
name = "git-workspace-cli"
version = "0.6.0"
description = "An opinionated git plugin that wraps git worktrees with a lifecycle system"
readme = "README.md"
license = "MIT"
authors = [{ name = "Gabriel Lima", email = "gvclima@gmail.com" }]
requires-python = ">=3.14"
keywords = ["git", "worktree", "workspace", "cli", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = ["tomlkit>=0.13", "typer>=0.24.1"]

[project.urls]
Homepage = "https://github.com/ewilazarus/git-workspace"
Repository = "https://github.com/ewilazarus/git-workspace"
Issues = "https://github.com/ewilazarus/git-workspace/issues"
Changelog = "https://github.com/ewilazarus/git-workspace/blob/main/CHANGELOG.md"

[tool.uv.build-backend]
module-name = "git_workspace"

[project.scripts]
git-workspace = "git_workspace:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyfakefs>=6.1.6",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.10",
    "ty>=0.0.30",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["git_workspace"]
